...
            modifier = modifier
                .fillMaxWidth()
                .focusRequester(focusRequester)
                .onFocusChanged {
                    showDatePicker = it.hasFocus
                }
                .testTag("calendar_input"),
            isError = isError,
            value = if (date == 0L) {
                ""
            } else date
                .toLocalDateTime()
                .format(DateTimeFormatter.ISO_DATE),
...
                }
        )
    }

    if (showDatePicker) {
        DatePickerDialog(
            modifier = Modifier.testTag("calendar_dialog"),
            onDismissRequest = {},
            confirmButton = {
                TextButton(
                    onClick = {
                        datePickerState.selectedDateMillis?.let(onDateSelected)
                        showDatePicker = false
...
