<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="dialog_confirm_button_text">OK</string>
    <string name="date_picker_label">Date</string>
</resources>