...
                            coroutineScope.launch {
                                delay(1000)
                                spotlightBounds = it.boundsInWindow()
                            }
                        }
                    }
                    .testTag("add_task"),
                onClick = dropUnlessResumed {
                    navController.navigate(CreationScreenRoute)
                }
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
...
